# oktoberfest-monitor

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: monitor.yml
src/: config.py  main.py  notify.py  state.py
src/fetchers/: api.py  festzelt_os.py  hash.py  headless.py  html.py
state/: state.json
tents/: ammer.yaml  armbrustschuetzen.yaml  augustiner.yaml  braeurosl.yaml  fischer-vroni.yaml  gloeckle-wirt.yaml  hacker.yaml  hofbraeu.yaml  kaefer.yaml  loewenbraeu.yaml  marstall.yaml  muenchner-knoedelei.yaml  muenchner-stubn.yaml  ochsenbraterei.yaml  paulaner.yaml  poschner.yaml  schottenhamel.yaml  schuetzen.yaml  weinzelt.yaml
