[project]
name = "oktoberfest-monitor"
version = "0.1.0"
description = "Monitors Oktoberfest tent reservation pages and pushes iPhone notifications via Pushover when 25.09.2026 / 26.09.2026 availability changes."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "jsonpath-ng>=1.6",
]

[project.optional-dependencies]
# Pin exactly: an unbounded range let pip silently upgrade Playwright to a build
# expecting a newer Chromium than the cached one, which broke browser.launch() in CI.
# Bump deliberately; the workflow cache key tracks this version and self-heals.
headless = ["playwright==1.59.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
